0.4.15/_sources/gallery/points-over-time.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/points-over-time.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_points-over-time.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_points-over-time.py:


Points over time
================

.. GENERATED FROM PYTHON SOURCE LINES 6-45



.. image-sg:: /gallery/images/sphx_glr_points-over-time_001.png
   :alt: points over time
   :srcset: /gallery/images/sphx_glr_points-over-time_001.png
   :class: sphx-glr-single-img





.. code-block:: default

    import napari
    import numpy as np
    import dask.array as da
    from skimage import data


    image4d = da.random.random(
            (4000, 32, 256, 256),
            chunks=(1, 32, 256, 256),
            )
    pts_coordinates = np.random.random((50000, 3)) * image4d.shape[1:]
    pts_values = da.random.random((50000, 4000), chunks=(50000, 1))

    viewer = napari.Viewer(ndisplay=3)
    image_layer = viewer.add_image(
            image4d, opacity=0.5
            )
    pts_layer = viewer.add_points(
            pts_coordinates,
            features={'value': np.asarray(pts_values[:, 0])},
            face_color='value',
            size=2,
            )


    def set_pts_features(pts_layer, values_table, step):
        # step is a 4D coordinate with the current slider position for each dim
        column = step[0]  # grab the leading ("time") coordinate
        pts_layer.features['value'] = np.asarray(values_table[:, column])
        pts_layer.face_color = 'value'  # force features refresh


    viewer.dims.events.current_step.connect(
            lambda event: set_pts_features(pts_layer, pts_values, event.value)
            )


    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_points-over-time.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: points-over-time.py <points-over-time.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: points-over-time.ipynb <points-over-time.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
